$Id$


Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V3.4
~~~~~~~~~~~~~~~

  o support for additional 8x8 button/LED matrix as used in Wilba's frontpanel layout


MIDIboxSEQ V3.3
~~~~~~~~~~~~~~~

  o edit page now shows "MUTED" instead of channel number of the currently 
     selected track is muted

  o changed definition format for LED assignments in setup_*.asm

  o it's now possible to invert the polarity of BLM LED cathode lines for the
    case that transistor based sink drivers should be added
    (-> DEFAULT_SRM_CATHODES_INV_MASK)

  o Button/LED Matrix, special behaviour in PATTERN page: shows selected
    pattern, allows to select new pattern (direct and very intuitive access
    to sequences of all 4 pattern groups :)

  o a new NRPN/Loopback CC parameter has been added which allows to set the
    step of a track which should be played from another track via Loopback (CC#64)

    CC value 1-32 are used to set the next step, Value 0 will be ignored
    Example configuration: 
      Track 1: Loopback, Channel #2, CC/CC/CC Mode, CC#A set to 64, Length 4
        Layer A Step 1: 2, Step 2: 0, Step 3: 7, Step 4: 15
      Track 2: common configuration, set some notes or CC to be played by your synthesizer. 
    Press PLAY: Track 2 will play step 2, 3, 7, 15, 2, 3, 7, 15, ... - controlled from Track 1
    Variations: e.g. use different clock divider values/directions/lengths on both tracks

  o Tap Tempo function has been added.
    There are three possibilities to access this function:
    - BPM page (new menu item), tap tempo on GP button #8
    - press&hold MENU button, tap tempo with the PLAY button
    - optional dedicated button (has to be assigned in setup_*.asm)
    Tap the button at least four times to define the BPM tempo.
    If the sequencer is currently stopped, it will start automatically with the 5th tap
    Note that MIOS V1.9f (or higher) is required for this function!
